welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: not found: value ab
else if (a+b == 10+b+c || ab == 10+a+c) {return 5}
                          ^